<resources>
    <string name="app_name">Social Learn</string>
    <string name="menu_home_home">Home</string>
    <string name="menu_home_profile">Perfil</string>
    <string name="home_select_options_learn">Selecione o que deseja aprender</string>
    <string name="home_select_options_skills">Selecione o que deseja ensinar</string>
    <string name="label_username">nome</string>
    <string name="label_surname">sobrenome</string>
    <string name="label_email">e-mail</string>
    <string name="label_email_confirm">confirme seu e-mail</string>
    <string name="label_password">senha</string>
    <string name="label_password_confirm">confirme sua senha</string>
    <string name="label_accept_terms">Li e aceitos os termos</string>
    <string name="label_terms">Termos de uso</string>
    <string name="label_create_account">Criar minha conta</string>
    <string name="label_reset_password">Esqueci minha senha</string>
    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Entrar</string>
    <string name="button_reset_password">Redefinir senha</string>
    <string name="button_create_account">Criar conta</string>
    <string name="button_next">Próximo</string>
    <string name="button_i_have_account">Já tenho conta</string>
    <string name="login_subtitle">Faça o login para continuar</string>
    <string name="signup_subtitle">Preencha os dados da sua conta</string>
    <string name="label_better_fuel_subtitle">Descubra o melhor custo/benefício</string>
    <string name="label_clear">Limpar dados</string>
    <string name="loading_message_processing">Carregando</string>
    <string name="hello">Ola</string>
    <string name="welcome_sugestions">Olá, separamos algumas sugestões para você!</string>
    <string name="welcome_tips">Sempre que desejar, use a busca para encontrar pessoas que possam ajudar com o tema desajado!</string>
    <string name="label_genero">genero</string>
    <string name="label_what_want_todo">selecione o que quer fazer</string>
    <string name="label_learn">Aprender</string>
    <string name="label_teach">Ensinar</string>
    <string name="label_all">Todas as opções</string>
    <string name="label_learn_about">quer aprender sobre?</string>
    <string name="label_teach_about">quer compartilhar sobre?</string>
    <string name="label_descricao_java">Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems. Em 2008 o Java foi adquirido pela empresa Oracle Corporation. Diferente das linguagens de programação modernas, que são compiladas para código nativo, a linguagem Java é compilada para um bytecode que é interpretado por uma máquina virtual. A linguagem de programação Java é a linguagem convencional da Plataforma Java, mas não é a sua única linguagem. J2ME Para programas e jogos de computador, celular, calculadoras, ou até mesmo o rádio do carro.</string>
    <string name="label_titulo_java">Aprenda Java sem complicação</string>
    <string name="label_descricao_angular">Angular JS na Prática Aprenda AngularJS com esse curso orientado a prática trazendo os principais conceitos desse framework de Javascript.</string>
    <string name="label_descricao_node">Node.js é um software de código aberto, multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um navegador web.[6][7]O runtime de JavaScript é constituído pelos seguintes comandos: node package manage (npm), e npx (node package extractor); onde o primeiro tem o propósito de executar código armazenado num package de nodejs, instalando o software globalmente ou localmente, já o segundo tem o propósito de instalar a nível local o código instalado globalmente. Um exemplo disso é o npx create-react-app que tem como propósito instalar a nível local um template vazio de um site de react, pronto a ser usado, através de uma fórmula instalada com npm</string>
    <string name="label_descricao_boot">O curso online Certificação Bootstrap foi criado para te levar ao próximo nível! Esse curso online tem objetivo de ensinar você a dominar Bootstrap em 57 dias. Podendo criar aplicações otimizadas e flexíveis, com Gulp, Bower, Sass, Design Responsivo e Bootstrap 4. O curso Certificação Bootstrap é composto de duas etapas.</string>
    <string name="label_descricao_front">O front-end é onde encontramos a "cara" de um site ou aplicativo, com design, interface de navegação e ferramentas de interação com o usuário, como áreas de buscas e formulários.</string>
    <string name="label_descricao_java_script">JavaScript (frequentemente abreviado como JS) é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma (protótipos, orientado a objeto, imperativo e, funcional).[2][3] Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web. JavaScript permite páginas da Web interativas e, portanto, é uma parte essencial dos aplicativos da web. A grande maioria dos sites usa, e todos os principais navegadores têm um mecanismo JavaScript dedicado para executá-lo.[4]É atualmente a principal linguagem para programação client-side em navegadores web. É também bastante utilizada do lado do servidor através de ambientes como o node.js</string>
    <string name="label_descricao_ruby_java">Ruby é uma linguagem nova em comparação às outras. Foi criada em 1995 pelo japonês Yuri Matsumoto. Uma linguagem limpa e direta toda orientada a objetos, bem simples de se aprender e trabalhar.</string>
    <string name="label_descricao_sales">DSalesforce. A Salesforce foi fundada em 1999, nos Estados Unidos, por Marc Benioff, ex-executivo da Oracle. Atualmente, a companhia é uma das líderes mundiais em soluções de CRM, conhecida, principalmente, pela plataforma Sales Cloud.</string>
    <string name="label_descricao_security">A preocupação com a segurança das aplicações fica além dos PC´s. Com a popularização dos smartphones, aplicações desenvolvidas para iOS e Android tem se tornado alvo dos crackers e as previsões indicam que em pouco tempo a quantidade de ataques direcionada aos dispositivos móveis será ainda maior que a dos desktops</string>
    <string name="label_descricao_sql">SQL (Structured Query Language) é a linguagem padrão de manipulação de bancos de dados relacionais. Ela conta com comandos para efetuar consultas, criação e alteração de tabelas, colunas, etc.</string>
    <string name="label_descricao_psql">PostgreSQL é um sistema gerenciador de banco de dados objeto relacional (SGBD), desenvolvido como projeto de código aberto.</string>
    <string name="label_descricao_c">O C# (leia-se C-Sharp ), é uma linguagem de programação orientada a objetos, que foi desenvolvida pela Microsoft e faz parte da plataforma .NET. Embora a linguagem C# tenha sido criada do zero, foi baseada na linguagem C++ e tem muitos elementos da linguagem Pascal e Java.</string>
    <string name="label_introducao">Introdução</string>
    <string name="button_finish">finalizar</string>
    <string name="aws">Amazon Web Services</string>
    <string name="kotlin">Kotlin</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="label_home">Home</string>
    <!--ERR, WNG, MSG-->
    <string name="ERROR_INVALID_EMAIL">E-mail com formato incorreto!</string>
    <string name="ERROR_WRONG_PASSWORD">Senha inválida</string>
    <string name="ERROR_USER_MISMATCH">Login não encontrado!</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">E-mail já em uso</string>
    <string name="ERROR_USER_DISABLED">Usuário bloqueado</string>
    <string name="ERROR_ITEM_NOT_FOUND">Item não encontrado</string>
    <string name="ERROR_OPERATION_NOT_ALLOWED">Operação não permitida</string>
    <string name="ERROR_GENERIC">Ocorreu um erro inesperado. Ação não concluída!</string>
    <string name="WARNING_EMPTY_LIST">Lista vazia</string>
    <string name="MSG_SUCCESS">Ação concluída com sucesso!</string>
    <string name="ERROR_NULL_LOGIN">E-mail e senha precisam estar preenchidos!</string>
    <string name="ERROR_NULL_RESET">E-mail precisa estar preenchido!</string>
    <string name="ERROR_NULL_SIGN">Todos os campos precisam estar preenchido!</string>
    <string name="ERROR_DIF_PASS">As senhas digitadas não são iguais</string>
    <string name="ERROR_EMAIL_INVALIDO">E-mail invalído!</string>
    <string name="app_label">Social Learn</string>
    <string name="search_hint">Pesquisar usuários por conteúdo</string>
    <string name="search_list_title">Veja os usuários que dominam essa tema</string>
    <string name="action_delete">Limpar histórico de busca</string>
    <string name="csharp">C#</string>
    <string name="postgree">Postgree</string>
    <string name="sqlServer">SQL Server</string>
    <string name="si">Segurança da Informação</string>
    <string name="salesforce">Salesforce</string>
    <string name="ruby">Ruby</string>
    <string name="javaScript">JavaScript</string>
    <string name="bootstrap">Bootstrap</string>
    <string name="nodeJs">NodeJS</string>
    <string name="angular">Angular</string>
    <string name="no_course_available">O conteúdo buscado ainda não está em nossa plataforma =(</string>
</resources>