<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSugestion">
    <LinearLayout
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogoApp"
                android:layout_width="348dp"
                android:layout_height="120dp"
                android:src="@drawable/sociallearn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="92dp"
                android:fontFamily="@font/helvetica_neue"

                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
                app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />

            <TextView
                android:id="@+id/tvWelcomeSugestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_subtitle"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvHello"
                app:layout_constraintTop_toBottomOf="@+id/tvHello" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <LinearLayout
                style="@style/container_edit_text">

                <TextView

                    style="@style/label_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_learn_about" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_learn" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_teach" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_all" />
            </LinearLayout>

            <Button
                android:id="@+id/btCreateAccount"
                android:text="@string/button_next"
                style="@style/button"/>
        </LinearLayout>
    </LinearLayout></ScrollView>