<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="br.com.fiap.sociallearn.viewmodel.register.KnowledgeToLearnViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSugestion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="32dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivLogoApp"
                    android:layout_width="348dp"
                    android:layout_height="120dp"
                    android:src="@drawable/sociallearn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="92dp"
                    android:fontFamily="@font/helvetica_neue"

                    android:text="@string/app_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
                    app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />

                <TextView
                    android:id="@+id/tvWelcomeSugestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_subtitle"
                    android:textColor="#9EB0BC"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tvHello"
                    app:layout_constraintTop_toBottomOf="@+id/tvHello" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"

                android:orientation="vertical">

                <LinearLayout style="@style/container_edit_text">

                    <TextView
                        style="@style/label_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_learn_about" />

                    <CheckBox
                        android:id="@+id/cbKotlin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.kotlinIsChecked}"
                        android:text="@string/kotlin" />

                    <CheckBox
                        android:id="@+id/cbJava"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.javaIsChecked}"
                        android:text="@string/java" />

                    <CheckBox
                        android:id="@+id/cbPython"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.pythonIsChecked}"
                        android:text="@string/python" />
                </LinearLayout>

                <Button
                    android:id="@+id/btCreateAccount"
                    style="@style/button"
                    android:text="@string/button_next"
                    android:onClick="@{() -> viewModel.onNextPressed()}" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
