<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="br.com.fiap.sociallearn.viewmodel.signUp.SignUpViewModel" />
    </data>

    <ScrollView
        android:background="@color/secondaryBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSugestion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="32dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helvetica_neue"

                    android:text="@string/app_name"
                    android:textColor="#FFF"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tvWelcomeSugestion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tvWelcomeSugestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_subtitle"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvHello"
                    app:layout_constraintTop_toBottomOf="@+id/tvHello" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"

                android:orientation="vertical">

                <LinearLayout style="@style/container_edit_text">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_username" />

                    <EditText
                        android:id="@+id/etUserNameSignUp"
                        style="@style/field_edit_text"
                        android:text="@={viewModel.name}" />
                </LinearLayout>
                <LinearLayout style="@style/container_edit_text">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_email" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/field_edit_text"
                        android:text="@={viewModel.email}" />
                </LinearLayout>

                <LinearLayout style="@style/container_edit_text">

                    <TextView

                        style="@style/label_edit_text"
                        android:text="@string/label_password" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/field_edit_text"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />
                </LinearLayout>

                <LinearLayout style="@style/container_edit_text">

                    <TextView

                        style="@style/label_edit_text"
                        android:text="@string/label_password_confirm" />

                    <EditText
                        android:id="@+id/etPasswordConfirm"
                        style="@style/field_edit_text"
                        android:inputType="textPassword"
                        android:text="@={viewModel.confirmPassword}" />
                </LinearLayout>

                <Button
                    android:id="@+id/btCreateAccount"
                    style="@style/button"
                    android:onClick="@{() -> viewModel.onNextPressed()}"
                    android:text="@string/button_next" />

                <TextView
                    android:id="@+id/tvError"
                    style="@style/field_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
