<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.fiap.sociallearn.viewmodel.login.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/secondaryBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ResetPasswordActivity">

        <ImageView
            android:id="@+id/ivLogoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_app_content_desc"
            android:src="@drawable/sociallearn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/helvetica_neue"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
            app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />

        <LinearLayout
            android:id="@+id/containerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitleLogin">

            <LinearLayout style="@style/container_edit_text"
                android:layout_marginTop="50dp">

                <TextView
                    style="@style/label_edit_text"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/etEmailResetPassword"
                    style="@style/field_edit_text"
                    android:text="@={viewModel.email}" />

            </LinearLayout>

            <Button
                android:id="@+id/btResetPassword"
                style="@style/button"
                android:onClick="@{_ -> viewModel.onSendNewPasswordPressed()}"
                android:text="@string/button_reset_password" />

            <TextView
                android:id="@+id/tvError"
                style="@style/field_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSubTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_reset_password"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvHello"
            app:layout_constraintTop_toBottomOf="@+id/tvHello" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>