<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvWelcomeSugestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="32dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btSignOut"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginStart="284dp"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:src="@drawable/ic_signout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="64dp">

                <ImageView
                    android:id="@+id/ivLogoApp"
                    android:layout_width="333dp"
                    android:layout_height="93dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/sociallearn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="178dp"

                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="1dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:text="@string/app_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogoApp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue"

            android:text="@string/hello"
            android:textColor="@color/primaryTextColor"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWelcomeSugestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_sugestions"
            android:textColor="#9EB0BC"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>